tests/ui/generics/unconstrained-type-params-inherent-impl.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-type-params-inherent-impl.rs:11:6
   |
LL | impl<T> MyType {
   |     -^-
   |     ||
   |     |unconstrained type parameter
   |     help: remove the unused type parameter `T`

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-type-params-inherent-impl.rs:20:9
   |
LL | impl<T, U> MyType1<T> {
   |       --^
   |       | |
   |       | unconstrained type parameter
   |       help: remove the unused type parameter `U`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0207`.
